--- a/ios/brave-ios/Sources/BraveWallet/Resources/fi.lproj/BraveWallet.strings
+++ b/ios/brave-ios/Sources/BraveWallet/Resources/fi.lproj/BraveWallet.strings
@@ -409,6 +409,12 @@
 /* The title of the crypto tab */
 "wallet.cryptoTitle" = "Brave-lompakko";
 
+/* The navigation title of the screen for users to customize ipfs public gateway address for NFT. */
+"wallet.customizeIPFSNFTPublicGatewayNavTitle" = "Mukauta IPFS-porttia NFT:tä varten";
+
+/* The navigation title of the screen for users to customize ipfs public gateway address. */
+"wallet.customizeIPFSPublicGatewayNavTitle" = "Mukauta IPFS-yhdyskäytävää";
+
 /* The title above the input fields for users to input network block explorer urls in Custom Network Details Screen. */
 "wallet.customNetworkBlockExplorerUrlsTitle" = "Lohkoketjuohjelman URL-osoitteet";
 
@@ -907,6 +913,24 @@
 /* The title of a button that Deselects all visible options. */
 "wallet.internalErrorMessage" = "Tapahtui sisäinen virhe";
 
+/* A title will displayed in the IPFS error page when IPFS is disabled. */
+"wallet.ipfsErrorTitle" = "Tälle sivustolle ei saada yhteyttä";
+
+/* The navigation title of the screen for users to customize NFT gateway. */
+"wallet.ipfsPublicGatewayAddressNFTTitle" = "Julkisen IPFS-portin osoite NFT:lle";
+
+/* The navigation title of the screen for users to customize IPFS public gateway. */
+"wallet.ipfsPublicGatewayAddressTitle" = "Julkisen IPFS-portin osoite";
+
+/* The description for the options to allow to resolve IPFS scheme urls. '%@' will be replaced with a url to explain more about IPFS gateway privacy. */
+"wallet.ipfsResolveMethodDescription" = "[Lue lisää](%@) IPFS-portin tietosuojamenetelmistä.";
+
+/* The title of the section under Web3 settings for users to pick an option to resolve IPFS Resources. */
+"wallet.ipfsResourcesOptionsTitle" = "Selvitä IPFS-resurssit";
+
+/* The header of the section under Web3 settings for IPFS NFT gateway setting. */
+"wallet.ipfsSettingsHeader" = "IPFS";
+
 /* Button to learn more about incomplete/pending wallet transactions. Or learn more about adding/switching networks in a dapp request view */
 "wallet.learnMoreButton" = "Lisätietoja";
 
@@ -1083,6 +1107,9 @@
 
 /* The title of the button that user clicks to add his/her first NFT */
 "wallet.nftEmptyImportNFT" = "Tuo NFT";
+
+/* Description of the NFT Gateway setting */
+"wallet.nftGatewayLongDescription" = "Kelvollinen IPFS-portti on toimitettava. Toimitetun portin kyky ladata IPFS-resurssit tarkistetaan.";
 
 /* The title of one of the dropdown options to group NFTs. This group will display all user's hidden NFTs. */
 "wallet.nftHidden" = "Piilotettu";
@@ -1413,6 +1440,9 @@
 
 /* As in sent cryptocurrency from one asset to another */
 "wallet.sent" = "Lähetetty";
+
+/* Title of the set IPFS gateway button */
+"wallet.setGatewayButtonTitle" = "Aseta";
 
 /* The title of the settings option inside the menu when user clicks the three dots button beside assets search button. */
 "wallet.settings" = "Asetukset";
@@ -2080,6 +2110,18 @@
 /* The title for the options to resolve Solana Name service domain names. */
 "wallet.web3DomainOptionsTitle" = "Selvitä Solana-nimipalvelun (SNS) verkkotunnukset";
 
+/* A brief explaination of IPFS on privacy. The first '%@' will be replaced with a link to a Brave article that explains how does IPFS impact users' privacy in details. The second '%@' will be replaced with 'web3IPFSInterstitialIPFSPrivacyLearnMore'. */
+"wallet.web3IPFSInterstitialIPFSPrivacy" = "IPFS (”InterPlanetary File System”) on julkinen vertaisverkko tietojen tallennusta ja siirroa varten. Tämän protokollan tietosuojamenetelmät poikkeavat HTTP(S):n vastaavista. <a href=%1$@>%2$@</a>";
+
+/* A brief explaination of resolving IPFS scheme url using a public gateway. */
+"wallet.web3IPFSInterstitialIPFSPublicGateway" = "Suojaa IP-osoitettasi sekä pyytämääsi sisältöä mahdollisilta kolmansilta osapuolilta, mutta ei julkisen portin operaattorilta. Portin operaattorin vastuulla on varmistaa, että portin kautta tarjottu sisältö on sitä, mitä pyysit. Tietokoneesi ei myöskään osallistu julksieen IPFS-verkkoon.";
+
+/* The title of the IPFS interstitial page for user to set the preference of IPFS scheme url handling. */
+"wallet.web3IPFSInterstitialIPFSTitle" = "Määritä IPFS-suosikkiasetuksesi";
+
+/* The title of the button that user will click to let Brave to resolve IPFS shceme url. */
+"wallet.web3IPFSInterstitialProceedButton" = "Käytä julkista porttia";
+
 /* The title for the entry displaying the preferred option to allow web3 sites to access the Ethereum provider API. */
 "wallet.web3PreferencesAllowEthProviderAccess" = "Sivustot voivat pyytää Ethereum-lompakkosi käyttöoikeutta";
 
@@ -2106,6 +2148,12 @@
 
 /* The footer of the toggle for user to enable/disable NFT discovery inside Web3 settings. */
 "wallet.web3SettingsEnableNFTDiscoveryFooter" = "Lisää automaattisesti omistamiasi NFT:itä lompakkoon käyttämällä kolmannen osapuolen sovellusliittymiä. [Lue lisää](%@)";
+
+/* Description of the wrong IPFS gateway alert */
+"wallet.wrongGatewayAlertDescription" = "Annettu URL-osoite on virheellinen. Portin pitäisi pystyä selvittämään IPFS-resursseja.";
+
+/* Title of the wrong IPFS gateway alert */
+"wallet.wrongGatewayAlertTitle" = "Portin määritys epäonnistui";
 
 /* The title of the sort option that sorts alphabetically from Z to A. Used in Portfolio/NFT filters and display settings. */
 "wallet.zToASortOption" = "Z-A";
