--- a/ios/brave-ios/Sources/BraveWallet/Resources/uk.lproj/BraveWallet.strings
+++ b/ios/brave-ios/Sources/BraveWallet/Resources/uk.lproj/BraveWallet.strings
@@ -409,6 +409,12 @@
 /* The title of the crypto tab */
 "wallet.cryptoTitle" = "Гаманець Brave";
 
+/* The navigation title of the screen for users to customize ipfs public gateway address for NFT. */
+"wallet.customizeIPFSNFTPublicGatewayNavTitle" = "Налаштування шлюзу IPFS для NFT";
+
+/* The navigation title of the screen for users to customize ipfs public gateway address. */
+"wallet.customizeIPFSPublicGatewayNavTitle" = "Налаштування шлюзу IPFS";
+
 /* The title above the input fields for users to input network block explorer urls in Custom Network Details Screen. */
 "wallet.customNetworkBlockExplorerUrlsTitle" = "URL-адреси оглядача блоків";
 
@@ -907,6 +913,24 @@
 /* The title of a button that Deselects all visible options. */
 "wallet.internalErrorMessage" = "Сталася внутрішня помилка";
 
+/* A title will displayed in the IPFS error page when IPFS is disabled. */
+"wallet.ipfsErrorTitle" = "Цей сайт недоступний";
+
+/* The navigation title of the screen for users to customize NFT gateway. */
+"wallet.ipfsPublicGatewayAddressNFTTitle" = "Адреса загальнодоступного шлюзу IPFS для NFT";
+
+/* The navigation title of the screen for users to customize IPFS public gateway. */
+"wallet.ipfsPublicGatewayAddressTitle" = "Адреса загальнодоступного шлюзу IPFS";
+
+/* The description for the options to allow to resolve IPFS scheme urls. '%@' will be replaced with a url to explain more about IPFS gateway privacy. */
+"wallet.ipfsResolveMethodDescription" = "[Докладніше](%@) про використання шлюзів IPFS із метою конфіденційності.";
+
+/* The title of the section under Web3 settings for users to pick an option to resolve IPFS Resources. */
+"wallet.ipfsResourcesOptionsTitle" = "Обробка ресурсів IPFS";
+
+/* The header of the section under Web3 settings for IPFS NFT gateway setting. */
+"wallet.ipfsSettingsHeader" = "IPFS";
+
 /* Button to learn more about incomplete/pending wallet transactions. Or learn more about adding/switching networks in a dapp request view */
 "wallet.learnMoreButton" = "Докладніше";
 
@@ -1083,6 +1107,9 @@
 
 /* The title of the button that user clicks to add his/her first NFT */
 "wallet.nftEmptyImportNFT" = "Імпортувати NFT";
+
+/* Description of the NFT Gateway setting */
+"wallet.nftGatewayLongDescription" = "Потрібно надати дійсний IPFS-шлюз. Наданий шлюз буде перевірено на можливість завантаження ресурсів IPFS.";
 
 /* The title of one of the dropdown options to group NFTs. This group will display all user's hidden NFTs. */
 "wallet.nftHidden" = "Приховано";
@@ -1413,6 +1440,9 @@
 
 /* As in sent cryptocurrency from one asset to another */
 "wallet.sent" = "Надіслано";
+
+/* Title of the set IPFS gateway button */
+"wallet.setGatewayButtonTitle" = "Установити";
 
 /* The title of the settings option inside the menu when user clicks the three dots button beside assets search button. */
 "wallet.settings" = "Налаштування";
@@ -2080,6 +2110,18 @@
 /* The title for the options to resolve Solana Name service domain names. */
 "wallet.web3DomainOptionsTitle" = "Обробка запитів на пошук доменних імен Solana Name Service (SNS)";
 
+/* A brief explaination of IPFS on privacy. The first '%@' will be replaced with a link to a Brave article that explains how does IPFS impact users' privacy in details. The second '%@' will be replaced with 'web3IPFSInterstitialIPFSPrivacyLearnMore'. */
+"wallet.web3IPFSInterstitialIPFSPrivacy" = "IPFS (InterPlanetary File System) — це загальнодоступна мережа для однорангового зберігання та доставки даних. Цей протокол має інші міркування щодо конфіденційності, ніж HTTP(S). <a href=%1$@>%2$@</a>";
+
+/* A brief explaination of resolving IPFS scheme url using a public gateway. */
+"wallet.web3IPFSInterstitialIPFSPublicGateway" = "Захищає вашу IP-адресу й уміст, який ви запитуєте, від потенційних сторонніх спостерігачів, але не від оператора загальнодоступних шлюзів. Оператор шлюзу несе відповідальність за те, щоб уміст, який вам подається через шлюз, був умістом, який ви запитували. Крім того, ваш пристрій не належить до загальнодоступної мережі IPFS.";
+
+/* The title of the IPFS interstitial page for user to set the preference of IPFS scheme url handling. */
+"wallet.web3IPFSInterstitialIPFSTitle" = "Установіть свою перевагу IPFS";
+
+/* The title of the button that user will click to let Brave to resolve IPFS shceme url. */
+"wallet.web3IPFSInterstitialProceedButton" = "Використати загальнодоступний шлюз";
+
 /* The title for the entry displaying the preferred option to allow web3 sites to access the Ethereum provider API. */
 "wallet.web3PreferencesAllowEthProviderAccess" = "Сайти можуть запитувати доступ до вашого гаманця Ethereum";
 
@@ -2106,6 +2148,12 @@
 
 /* The footer of the toggle for user to enable/disable NFT discovery inside Web3 settings. */
 "wallet.web3SettingsEnableNFTDiscoveryFooter" = "Автоматично додавайте NFT, якими ви володієте, у гаманець, використовуючи сторонні API. [Докладніше](%@)";
+
+/* Description of the wrong IPFS gateway alert */
+"wallet.wrongGatewayAlertDescription" = "Надано недійсну URL-адресу. Шлюз повинен вирішувати ресурси IPFS.";
+
+/* Title of the wrong IPFS gateway alert */
+"wallet.wrongGatewayAlertTitle" = "Помилка налаштування шлюзу";
 
 /* The title of the sort option that sorts alphabetically from Z to A. Used in Portfolio/NFT filters and display settings. */
 "wallet.zToASortOption" = "Я — А";
