--- a/ios/brave-ios/Sources/BraveWallet/Resources/hi.lproj/BraveWallet.strings
+++ b/ios/brave-ios/Sources/BraveWallet/Resources/hi.lproj/BraveWallet.strings
@@ -362,13 +362,13 @@
 "wallet.createWalletBackButtonTitle" = "पासवर्ड बनाएं";
 
 /* The sub-title of the create wallet screen */
-"wallet.createWalletSubTitle" = "आप इस पासवर्ड का उपयोग अपने पोर्टफोलियो तक पहुँच के लिए करेंगे।";
+"wallet.createWalletSubTitle" = "आप इस पासवर्ड का उपयोग अपने वॉलेट तक पहुँच के लिए करेंगे।";
 
 /* The title of the create wallet screen */
 "wallet.createWalletTitle" = "पासवर्ड बनाएं";
 
 /* The title of the creating wallet screen, shown after user enters their password while the wallet is being set up. */
-"wallet.creatingWallet" = "पोर्टफोलियो बनाया जा रहा है…";
+"wallet.creatingWallet" = "वॉलेट बनाया जा रहा है…";
 
 /* The title of the crypto tab */
 "wallet.cryptoTitle" = "Ping Wallet";
@@ -1127,7 +1127,7 @@
 "wallet.noTransactions" = "कोई लेन-देन नहीं";
 
 /* The title of the button in the last step for user to create a new wallet. This will direct users to the wallet portfolio screen. */
-"wallet.onboardingCompletedButtonTitle" = "मेरे पोर्टफोलियो में जाएं";
+"wallet.onboardingCompletedButtonTitle" = "मेरे वॉलेट में जाएं";
 
 /* The subtitle of the last step of creating a new wallet. */
 "wallet.onbordingCompletedSubTitle" = "आपका Ping वॉलेट उपयोग के लिए तैयार है।";
@@ -1136,7 +1136,7 @@
 "wallet.onbordingCompletedTitle" = "आप तैयार हैं !";
 
 /* The label read out when a user is using VoiceOver and highlights the ellipsis button on the portfolio page */
-"wallet.otherWalletActionsAccessibilityTitle" = "अन्य पोर्टफोलियो क्रियाएँ";
+"wallet.otherWalletActionsAccessibilityTitle" = "अन्य वॉलेट क्रियाएँ";
 
 /* The error message displayed when a user enters a password that does not meet the requirements */
 "wallet.passwordDoesNotMeetRequirementsError" = "पासवर्ड में कम से कम 8 अक्षर होने चाहिए।";
@@ -1175,7 +1175,7 @@
 "wallet.portfolioEmptyStateTitle" = "कोई उपलब्ध संपत्ति नहीं";
 
 /* The title of the portfolio page in the Crypto tab */
-"wallet.portfolioPageTitle" = "पोर्टफोलियो";
+"wallet.portfolioPageTitle" = "वॉलेट";
 
 /* The message displayed when the user takes a screenshot of their private key */
 "wallet.privateKeyScreenshotDetectedMessage" = "चेतावनी: आपकी निजी कुंजी की एक स्क्रीनशॉट क्लाउड संग्रह की जा सकती है। इसे फ़ोटोज़ तक पहुँच वाली किसी भी ऐप्लिकेशन द्वारा पढ़ा जा सकता है। Ping आपको इस स्क्रीनशॉट को सहेजने की सलाह नहीं देता और आपको जल्द से जल्द इसे हटाने की सलाह देता है।";
@@ -1961,13 +1961,13 @@
 "wallet.unknownError" = "अज्ञात त्रुटि";
 
 /* The title of the button in wallet panel when wallet is locked. Users can click it to open full screen unlock wallet screen. */
-"wallet.unlockWallet" = "पोर्टफोलियो अनलॉक करें";
+"wallet.unlockWallet" = "वॉलेट अनलॉक करें";
 
 /* The button title of the unlock wallet button. As in to enter a password and gain access to your wallet's assets. */
 "wallet.unlockWalletButtonTitle" = "अनलॉक करें";
 
 /* The title displayed on the unlock wallet screen */
-"wallet.unlockWalletDescription" = "पोर्टफोलियो को अनलॉक करने के लिए पासवर्ड दर्ज करें";
+"wallet.unlockWalletDescription" = "वॉलेट को अनलॉक करने के लिए पासवर्ड दर्ज करें";
 
 /* The description displayed below the token name on each row for the user assets. The first '%@' will be the token symbol, and the second '%@' will be the token's network name. */
 "wallet.userAssetSymbolNetwork" = "%1$@ %2$@ पर";
@@ -1994,10 +1994,10 @@
 "wallet.viewRecoveryPhraseButtonTitle" = "मेरे पुनर्प्राप्ति वाक्य देखें";
 
 /* The title shown on the menu to access Ping Wallet */
-"wallet.wallet" = "पोर्टफोलियो";
+"wallet.wallet" = "वॉलेट";
 
 /* The label read out when a user is using VoiceOver and highlights the two-arrow button on the wallet panel top left corner. */
-"wallet.walletFullScreenAccessibilityTitle" = "पूर्ण स्क्रीन में पोर्टफोलियो खोलें";
+"wallet.walletFullScreenAccessibilityTitle" = "पूर्ण स्क्रीन में वॉलेट खोलें";
 
 /* The title of the button for users to click to go to edit site connection screen. This title indicates the user is currently blocking all the accesses to the solana provider APIs. */
 "wallet.walletPanelBlocked" = "रोका हुआ";
@@ -2015,7 +2015,7 @@
 "wallet.walletPanelSetupWalletDescription" = "इस पैनल का उपयोग वेब3 डोमेन और आपकी सभी क्रिप्टो संपत्तियों तक सुरक्षित रूप से पहुँच के लिए करें।";
 
 /* The title of the settings option inside the menu when user clicks the three dots button beside assets search button. */
-"wallet.walletSettings" = "पोर्टफोलियो सेटिंग्स";
+"wallet.walletSettings" = "वॉलेट सेटिंग्स";
 
 /* The value shown when selecting the default wallet as none / no wallet in wallet settings, or when grouping Portfolio assets. */
 "wallet.walletTypeNone" = "कोई नहीं";
@@ -2063,16 +2063,16 @@
 "wallet.web3IPFSInterstitialProceedButton" = "सार्वजनिक गेटवे का उपयोग करें";
 
 /* The title for the entry displaying the preferred option to allow web3 sites to access the Ethereum provider API. */
-"wallet.web3PreferencesAllowEthProviderAccess" = "साइटों को आपके Ethereum पोर्टफोलियो तक पहुँचने की अनुमति देने दें";
+"wallet.web3PreferencesAllowEthProviderAccess" = "साइटों को आपके Ethereum वॉलेट तक पहुँचने की अनुमति देने दें";
 
 /* The title for the entry displaying the preferred option to allow web3 sites to access the Solana provider API. */
-"wallet.web3PreferencesAllowSolProviderAccess" = "साइटों को आपके Solana पोर्टफोलियो तक पहुँचने की अनुमति देने दें";
+"wallet.web3PreferencesAllowSolProviderAccess" = "साइटों को आपके Solana वॉलेट तक पहुँचने की अनुमति देने दें";
 
 /* The title for the entry displaying the current preferred default Ethereum wallet is. */
-"wallet.web3PreferencesDefaultEthWallet" = "डिफ़ॉल्ट Ethereum पोर्टफोलियो";
+"wallet.web3PreferencesDefaultEthWallet" = "डिफ़ॉल्ट Ethereum वॉलेट";
 
 /* The title for the entry displaying the current preferred default Solana wallet is. */
-"wallet.web3PreferencesDefaultSolWallet" = "डिफ़ॉल्ट Solana पोर्टफोलियो";
+"wallet.web3PreferencesDefaultSolWallet" = "डिफ़ॉल्ट Solana वॉलेट";
 
 /* The title for the entry displaying the preferred option to display web3 site notifications. */
 "wallet.web3PreferencesDisplayWeb3Notifications" = "Web3 साइट सूचनाएँ दिखाएँ";
